[package]
name = "css-rtl-compiler-core"
version = "0.0.0"
edition = "2021"

[dependencies]
swc_atoms = "0.6.7"
swc_common = { version = "0.33.26", features = ["tty-emitter"] }
swc_css = "0.157.40"
swc_css_ast = "0.140.23"
swc_css_codegen = "0.151.35"
swc_css_parser = "0.150.33"
swc_css_visit = "0.139.22"

[dev-dependencies]
pretty_assertions = "1.4.0"
