[package]
name = "css-rtl-compiler-core"
version = "0.0.0"
edition = "2021"
description = "Convert CSS files into an RTL-compatible version"

license = "Apache-2.0"
include = ["src/*.rs", "README.md", "LICENSE"]

[dependencies]
lazy_static = "1.5.0"
swc_atoms = "3.0.4"
swc_common = { version = "5.0.1", features = ["tty-emitter"] }
swc_css = "6.0.0"
swc_css_ast = "5.0.0"
swc_css_codegen = "5.0.0"
swc_css_parser = "5.0.0"
swc_css_visit = "5.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
swc_core = { version = "12.0.1", features = ["testing"] }
