[package]
name = "css-rtl-compiler-wasm"
version = "0.0.0"
edition = "2021"
description = "WASM binary for css-rtl-compiler"

license = "Apache-2.0"
include = ["src/*.rs", "README.md", "LICENSE"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
css-rtl-compiler-core = { version = "0.0.0", path = "../css-rtl-compiler-core" }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
